created users.txt and dataupload

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -6,7 +6,7 @@
     <div th:replace="fragments::header"></div>
     <div th:replace="fragments::navBar"></div>
 <h1 th:text="${pageTitle}">title</h1>
-<h1>This is a Heading</h1>
+<h1><a href="/game/" >Start Game</a></h1>
 <p>This is a paragraph.</p>
 
     <div th:replace="fragments::footer"></div>
