--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -12,7 +12,7 @@
 
     <nav th:fragment="navBar">
         <ul>
-            <li><a href="index.html">Home</a></li>
+            <li><a href="/">Home</a></li>
         </ul>
     </nav>
 
