--- a/src/main/resources/templates/game/index.html
+++ b/src/main/resources/templates/game/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="https://www.thymeleaf.org/">
-<head th:replace="fragments:head">
+<head th:replace="fragments::head">
 </head>
 <body>
-<header th:replace="fragments:header"></header>
-<nav th:replace="fragments:navBar"></nav>
+<header th:replace="fragments::header"></header>
+<nav th:replace="fragments::navBar"></nav>
 
 
 
