added players page

--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -13,6 +13,7 @@
     <nav th:fragment="navBar">
         <ul>
             <li><a href="/">Home</a></li>
+            <li><a href="/players">Players</a></li>
         </ul>
     </nav>
 
