--- a/src/main/resources/templates/game/choosePlayers.html
+++ b/src/main/resources/templates/game/choosePlayers.html
@@ -1,11 +1,44 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="https://www.thymeleaf.org/">
-<head th:replace="fragments:head">
+<head th:replace="fragments::head">
 </head>
 <body>
     <header th:replace="fragments::header"></header>
     <nav th:replace="fragments::navBar"></nav>
 
+    <form action="gameOn" method="post">
+        <label> Player 1:
+            <select name="player1">
+                <th:block th:each="player : ${players}">
+                    <option value="${player.id}" th:text="${player.name}"></option>
+                </th:block>
+            </select>
+        </label>
+        <label> Player 2:
+            <select name="player2">
+                <th:block th:each="player : ${players}">
+                    <option value="${player.id}" th:text="${player.name}"></option>
+                </th:block>
+            </select>
+        </label>
+        <label th:if="${newGame.numberOfPlayers>=3}"> Player 3:
+            <select name="player3">
+                <th:block th:each="player : ${players}">
+                    <option value="${player.id}" th:text="${player.name}"></option>
+                </th:block>
+            </select>
+        </label>
+        <label th:if="${newGame.numberOfPlayers==4}"> Player 4:
+            <select name="player4">
+                <th:block th:each="player : ${players}">
+                    <option value="${player.id}" th:text="${player.name}"></option>
+                </th:block>
+            </select>
+        </label>
+
+
+        <input type="submit">
+    </form>
 
 
 
