corrected displaying on Player name on game/gameOn

--- a/src/main/resources/templates/game/choosePlayers.html
+++ b/src/main/resources/templates/game/choosePlayers.html
@@ -6,32 +6,32 @@
     <header th:replace="fragments::header"></header>
     <nav th:replace="fragments::navBar"></nav>
 
-    <form action="gameOn" method="post">
+    <form action="choosePlayers" method="post">
         <label> Player 1:
             <select name="player1">
                 <th:block th:each="player : ${players}">
-                    <option th:value="${player}" th:text="${player.name}"></option>
+                    <option th:value="${player.id}" th:text="${player.name}"></option>
                 </th:block>
             </select>
         </label>
         <label> Player 2:
             <select name="player2">
                 <th:block th:each="player : ${players}">
-                    <option th:value="${player}" th:text="${player.name}"></option>
+                    <option th:value="${player.id}" th:text="${player.name}"></option>
                 </th:block>
             </select>
         </label>
         <label th:if="${newGame.numberOfPlayers>=3}"> Player 3:
             <select name="player3">
                 <th:block th:each="player : ${players}">
-                    <option th:value="${player}" th:text="${player.name}"></option>
+                    <option th:value="${player.id}" th:text="${player.name}"></option>
                 </th:block>
             </select>
         </label>
         <label th:if="${newGame.numberOfPlayers==4}"> Player 4:
             <select name="player4">
                 <th:block th:each="player : ${players}">
-                    <option th:value="${player}" th:text="${player.name}"></option>
+                    <option th:value="${player.id}" th:text="${player.name}"></option>
                 </th:block>
             </select>
         </label>
