--- a/src/main/resources/templates/game/index.html
+++ b/src/main/resources/templates/game/index.html
@@ -6,7 +6,7 @@
     <header th:replace="fragments::header"></header>
     <nav th:replace="fragments::navBar"></nav>
 
-    <form action="choosePlayers" method="post">
+    <form action="numOfPlayers" method="post">
         <label>Select Number of players:
             <select name="numberOfPlayers">
                 <option value="2">2</option>
